--- a/app-ejb/src/main/webapp/resources/css/style.css
+++ b/app-ejb/src/main/webapp/resources/css/style.css
@@ -19,6 +19,16 @@ body {
     -moz-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
 }
+.mini-container {
+    box-sizing: border-box;
+    width: 90%;
+    max-width: 1080px;
+    background: #edeff0;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
+}
 nav {
     float: right;
     margin: 1.5em 0;
